src/main/istio/Gateway_VS_Openshift.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: bgc-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: blue-green-canary
spec:
  hosts:
  - "*"
  gateways:
  - bgc-gateway
  http:
  - match:
    - uri:
        prefix: /
    rewrite:
      uri: /
    route:
    - destination:
        host: blue-green-canary
        port:
          number: 8080
  - match:
    - uri:
        prefix: /hello
    rewrite:
      uri: /hello
    route:
    - destination:
        host: blue-green-canary
        port:
          number: 8080
