src/main/istio/Virtual_service_blue.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: blue-green-canary
spec:
  hosts:
  - "*"
  gateways:
  - bgc-gateway
  http:
  - match:
    - uri:
        prefix: /
    rewrite:
      uri: /
    route:
    - destination:
        host: blue-green-canary
        port:
          number: 8080
        subset: version-blue          
      weight: 100
  - match:
    - uri:
        prefix: /hello
    rewrite:
      uri: /hello
    route:
    - destination:
        host: blue-green-canary
        port:
          number: 8080
        subset: version-blue
      weight: 100
