src/main/istio/Virtual_service_canary_android.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: blue-green-canary
spec:
  hosts:
  - "*"
  gateways:
  - bgc-gateway
  http:
  - match:
    - headers:
        user-agent:
          regex: .*Android.*
    route:
    - destination:
        host: blue-green-canary
        subset: version-canary
  - route:
    - destination:
        host: blue-green-canary
        subset: version-green
