src/main/istio/Virtual_service_canary_firefox.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: blue-green-canary
spec:
  hosts:
  - "*"
  gateways:
  - bgc-gateway
  http:
  - match:
    - headers:
        user-agent:
          regex: .*Firefox.*
    route:
    - destination:
        host: blue-green-canary
        subset: version-canary
  - route:
    - destination:
        host: blue-green-canary
        subset: version-green
  - match:
    - uri:
        prefix: /hello
    rewrite:
      uri: /hello
    route:
    - destination:
        host: blue-green-canary
        port:
          number: 8080
        subset: version-green
      weight: 100
