src/main/istio/Virtual_service_canary_mirror.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: blue-green-canary
spec:
  hosts:
  - "*"
  gateways:
  - bgc-gateway
  http:
  - match:
    - uri:
        prefix: /
    rewrite:
      uri: /
    route:
    - destination:
        host: blue-green-canary
        subset: version-green
      mirror:
        host: blue-green-canary
        subset: version-canary
